0.03
 - Add KOZO account.
 - Fix example in doc.
 - Rename examples to better names.
 - Update copyright years.
 - Update Module::Install to 1.21 version.

0.02 2020-03-10T13:11:53+01:00
 - Add LKUNDRAK CPAN id.

0.01 2020-03-10T13:07:04+01:00
 - First version.