@@ -31,7 +31,7 @@ EXAMPLE1
      print "Count of Slovak CPAN authors: $count\n";
 
      # Output:
-     # Count of Slovak CPAN authors: 5
+     # Count of Slovak CPAN authors: 6
 
 EXAMPLE2
      use strict;
@@ -56,6 +56,7 @@ EXAMPLE2
      #     [2]  "KOZO",
      #     [3]  "LKUNDRAK",
      #     [4]  "PALI",
+     #     [5]  "SAMSK",
      # ]
 
 DEPENDENCIES
