@@ -1,5 +1,6 @@
 0.03
  - Add KOZO account.
+ - Add SAMSK account.
  - Fix example in doc.
  - Rename examples to better names.
  - Update copyright years.
